@@ -1,0 +1,4 @@
+from distutils2.core import setup
+
+if __name__ == '__main__':
+    setup()
